# tutorials

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  .zenodo.json  1_Intro_to_CDS_services_in_notebooks.html  2_Peculiar_galaxies__first_steps_with_MOCs.html  3_Abel1656_The_Coma_Cluster_of_Galaxies.html  3_Cluster_of_Galaxies__the_Simple_Spectral_Access_Protocol.html  4_High_Energy_sources__Multi_instrument_multi_wavelength_exploration_using_VO_tools.html  5_Brown_Dwarf_Search__Cross-matching_Catalogs.html  5_Brown_Dwarf_Search_via_Cross-matching_Catalogs.html  6_Advanced_usage_of_MOCs.html  6_Planetary_Nebulae__Advanced_usage_of_HiPS_and_MOCs.html  6_The_MASH_Planetary_Nebulae_Catalog__Advanced_usage_of_HiPS_and_MOC.html  7_Multi-Order-Coverage-data-structure-to-plan-multi-messenger-observations-v2.html  7_Multi-messenger_astronomy__Planning_observations_rapidly_with_MOCs.html  CHANGELOG.md  CITATION.cff  LICENCE  README.md  codemeta.json  genindex.html  intro.html  justfile  objects.inv  postBuild  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  search.html  searchindex.js
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: notebooks-check_ubuntu.yml  notebooks-check_windows.yml  notebooks-checks_mac-os.yml  notebooks_check_windows.yml  notebooks_checks.yml  notebooks_checks_mac-os.yml  validate_codemeta.yml
.pytest_cache/: README.html
Notebooks/: 1_Intro_to_CDS_services_in_notebooks.ipynb  2_Arp_peculiar_galaxies_catalog__first_steps_with_MOCs.ipynb  2_Peculiar_galaxies__first_steps_with_MOCs.ipynb  3_Abel1656_The_Coma_Cluster_of_Galaxies.ipynb  3_Cluster_of_Galaxies__the_Simple_Spectral_Access_Protocol.ipynb  4_HighEnergy-tutorial.ipynb  4_High_Energy_sources__Multi_instrument_multi_wavelength_exploration_using_VO_tools.ipynb  5_Brown_Dwarf_Search__Cross-matching_Catalogs.ipynb  5_Brown_Dwarf_Search_via_Cross-matching_Catalogs.ipynb  5_Discovery_of_Brown_Dwarfs_mining_the_2MASS_and_SDSS_databases.ipynb  6_Advanced_usage_of_HiPS_and_MOC.ipynb  6_Advanced_usage_of_MOCs.ipynb  6_Planetary_Nebulae__Advanced_usage_of_HiPS_and_MOCs.ipynb  6_The_MASH_Planetary_Nebulae_Catalog__Advanced_usage_of_HiPS_and_MOC.ipynb  7_Multi-Order-Coverage-data-structure-to-plan-multi-messenger-observations-v2.ipynb  7_Multi-messenger_astronomy__Planning_observations_rapidly_with_MOCs.ipynb  Abel1656_The_Coma_Cluster_of_Galaxies.ipynb  Advanced_usage_of_HiPS_and_MOC.ipynb  CDS_Intro_Tutorial.ipynb  Data_FERMI-HESS-SIMBAD-AGN.csv  Discovery_of_Brown_Dwarfs_mining_the_2MASS_and_SDSS_databases.ipynb  HiPS_and_MOC.ipynb  MOCpy_tutorial_ROSA2022.ipynb  Notebook_Coma.ipynb  The_CDS_tutorial.ipynb  The_CDS_tutorial_extended.ipynb  Tools_for_Virtual_Observatory.ipynb
Notebooks/.ipynb_checkpoints/: Abel1656_The_Coma_Cluster_of_Galaxies-checkpoint.ipynb  HiPS_and_MOC-checkpoint.ipynb  The_CDS_tutorial-checkpoint.ipynb  The_CDS_tutorial_extended-checkpoint.ipynb
Notebooks/Conferences_and_Schools/2022_ROSA/: MOCpy_tutorial_ROSA2022.ipynb  moc_intersection.fits
Notebooks/Data/: 2MASS_PSC.vot  Data_FERMI-HESS-SIMBAD-AGN.csv  SDSS_DR9.vot  low_extinction_moc.fits  sed_result.vot  zsp17_without.csv
Notebooks/Data/J_ApJS_218_23/: J_ApJS_218_23.pkl  cone_search.pkl
Notebooks/Data/MASH_Sample/: 2001_sr.fits  2003_sr.fits  2003_sr_modified.fits  2004_sr.fits  2004_sr_modified.fits  2005_sr.fits  2005_sr_modified.fits  2006_sr.fits  2006_sr_modified.fits  2007_sr.fits  2007_sr_modified.fits  2008_sr.fits  2008_sr_modified.fits  2009_sr.fits  2009_sr_modified.fits  2010_sr.fits  2010_sr_modified.fits  2011_sr.fits  (+532 more)
Notebooks/Result_moc/: 2014_sr_mod.fits  2035_sr_mod.fits  2038_sr_mod.fits  2047_sr_mod.fits  2049_sr_mod.fits  2059_sr_mod.fits  2070_sr_mod.fits  2098_sr_mod.fits  2101_sr_mod.fits  2105_sr_mod.fits  2143_sr_mod.fits  2154_sr_mod.fits  2169_sr_mod.fits  2193_sr_mod.fits  2199_sr_mod.fits  2201_sr_mod.fits  2202_sr_mod.fits  2204_sr_mod.fits  2220_sr_mod.fits  2225_sr_mod.fits  2239_sr_mod.fits  2245_sr_mod.fits  2247_sr_mod.fits  2249_sr_mod.fits  2253_sr_mod.fits  2258_sr_mod.fits  2260_sr_mod.fits  2264_sr_mod.fits  2277_sr_mod.fits  2280_sr_mod.fits  2281_sr_mod.fits  2294_sr_mod.fits  2298_sr_mod.fits  2303_sr_mod.fits  2304_sr_mod.fits  2317_sr_mod.fits  2327_sr_mod.fits  2337_sr_mod.fits  2338_sr_mod.fits
Past_Conferences_and_Schools/2018_ADASS/: adass2018.ipynb  moc.fits
Past_Conferences_and_Schools/2022_ROSA/: MOCpy_tutorial_ROSA2022.ipynb
Past_Conferences_and_Schools/2023_IAS_CODE_CLUB/: accessing_astro_data_a_focus_on_TAP.ipynb
Past_Conferences_and_Schools/2023_SF2A/: intro_to_python_in_astro.ipynb
Past_Conferences_and_Schools/2024-11-14_ADASS/: ADASS2024_ipyaladin_demo.ipynb  requirements.txt
Past_Conferences_and_Schools/2024_IAU/: space_and_time_queries.ipynb
Past_Conferences_and_Schools/2024_IAU_VO_workshop/: grb_list.vot  grbs_simbad.vot  space_and_time_queries.ipynb
Past_Conferences_and_Schools/2025-12-02_VO_training_event/: programmatic-access-to-CDS-services-an-illustration-with-carbon-stars.ipynb
Past_Conferences_and_Schools/CDS_intro_tutorial_versions/: The_CDS_tutorial.ipynb  The_CDS_tutorial_extended.ipynb
_sources/: 1_Intro_to_CDS_services_in_notebooks.ipynb  2_Arp_peculiar_galaxies_catalog__first_steps_with_MOCs.ipynb  2_Peculiar_galaxies__first_steps_with_MOCs.ipynb  3_Abel1656_The_Coma_Cluster_of_Galaxies.ipynb  3_Cluster_of_Galaxies__the_Simple_Spectral_Access_Protocol.ipynb  4_HighEnergy-tutorial.ipynb  5_Brown_Dwarf_Search__Cross-matching_Catalogs.ipynb  5_Brown_Dwarf_Search_via_Cross-matching_Catalogs.ipynb  6_Advanced_usage_of_MOCs.ipynb  6_Planetary_Nebulae__Advanced_usage_of_HiPS_and_MOCs.ipynb  6_The_MASH_Planetary_Nebulae_Catalog__Advanced_usage_of_HiPS_and_MOC.ipynb  7_Multi-messenger_astronomy__Planning_observations_rapidly_with_MOCs.ipynb  intro.md
(+84 files in other folders)
