[project]
name = "cds-escape-tutorials"
# 3.6 is no longer maintained
requires-python = ">=3.7"

[project.urls]
repository = "https://github.com/cds-astro/tutorials"

[tool.ruff]
fix = true
force-exclude = true
format = "grouped"
show-source = true
ignore-init-module-imports = true
target-version = "py37"
# Allow lines to be as long as 120 characters.
line-length = 120
extend-select = ["SIM", "FBT", "D", "UP", "N", "S", "B", "A", "C4", "EM", "ICN", "RET", "ARG", "PD", "PGH", "RUF"]
extend-ignore = ["E501", "D203"]
# E501: line length (done by black in our case)

[tool.ruff.per-file-ignores]
# D104: Missing docstring in public package
"__init__.py" = ["D104"]

[tool.ruff.flake8-errmsg]
max-string-length = 20

[tool.ruff.flake8-import-conventions]
# Declare the default aliases.
# seaborn = "sns"
# Declare a custom alias for the `matplotlib` module.
# "dask.dataframe" = "dd"

[tool.ruff.pydocstyle]
convention = "numpy"  # Accepts: "google", "numpy", or "pep257"

[tool.isort]
profile = "black"
known_astrolibraries=["astropy", "astropy_healpix"]
known_cdslibraries=["mocpy","cdshealpix"]
known_plotinglibraries=["matplotlib","seaborn"]
sections = ["FUTURE","STDLIB","ASTROLIBRARIES","CDSLIBRARIES","PLOTINGLIBRARIES","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]
import_heading_stdlib="Standard Library"
import_heading_firstparty="Local imports"
import_heading_astrolibraries="Astropy tools"
import_heading_cdslibraries="Moc and HEALPix tools"
import_heading_plotinglibraries="For plots"