[project]
name = "cds-escape-tutorials"
# 3.6 is no longer maintained
requires-python = ">=3.7"

[project.urls]
repository = "https://github.com/cds-astro/tutorials"

[tool.ruff.per-file-ignores]
# D104: Missing docstring in public package
# D100: Missing docstring in public module
"__init__.py" = ["D104"]
"Notebooks/*.ipynb" = ["D100"]

[tool.ruff]
fix = true
force-exclude = true
format = "grouped"
show-source = true
ignore-init-module-imports = true
target-version = "py37"
# Allow lines to be as long as 120 characters.
line-length = 120
extend-select = ["SIM", "FBT", "D", "UP", "N", "S", "B", "A", "C4", "EM", "ICN", "RET", "ARG", "PD", "PGH", "RUF"]
extend-ignore = ["E501", "D203", "D213", "D100", "N816"]
# E501: line length (done by black in our case)
# D203: 1 blank line required before class docstring
# D213:
# N816:  Variable `mixed_Case` in global scope should not be mixedCase

[tool.ruff.flake8-errmsg]
max-string-length = 20

[tool.ruff.flake8-import-conventions]
# Declare the default aliases.
# seaborn = "sns"
# Declare a custom alias for the `matplotlib` module.
# "dask.dataframe" = "dd"

[tool.ruff.pydocstyle]
convention = "numpy"  # Accepts: "google", "numpy", or "pep257"

[tool.isort]
profile = "black"
known_astrolibraries=["astropy", "astropy_healpix", "astroplan"]
known_healpixandmoc=["mocpy","cdshealpix"]
known_plotinglibraries=["matplotlib","seaborn", "plotly"]
known_skyvisualizations=["ipyaladin"]
known_query=["astroquery", "pyvo"]
known_datahandling=["numpy", "specutils", "scipy"]
sections = ["FUTURE","STDLIB","ASTROLIBRARIES", "QUERY", "HEALPIXANDMOC", "SKYVISUALIZATIONS","PLOTINGLIBRARIES","DATAHANDLING","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]
import_heading_stdlib="Standard Library"
import_heading_firstparty="Local imports"
import_heading_astrolibraries="Astronomy tools"
import_heading_datahandling="Data handling"
import_heading_healpixandmoc="Moc and HEALPix tools"
import_heading_plotinglibraries="For plots"
import_heading_skyvisualizations="Sky visualization"
import_heading_query="Access astronomical databases"