[project]
name = "cds-escape-tutorials"
version = "1.1.0"
# 3.8 has been dropped by astropy
requires-python = ">=3.9"

[project.urls]
repository = "https://github.com/cds-astro/tutorials"

[tool.ruff.lint.per-file-ignores]
# D104: Missing docstring in public package
# D100: Missing docstring in public module
"__init__.py" = ["D104"]
"Notebooks/*.ipynb" = ["D100", "B018"]

[tool.ruff]
fix = true
force-exclude = true
output-format = "grouped"
target-version = "py39"
# Allow lines to be as long as 120 characters.
line-length = 120

[tool.ruff.lint]
extend-select = ["SIM", "FBT", "D", "UP", "N", "S", "B", "A",
                 "C4", "EM", "ICN", "RET", "ARG", "PD", "PGH",
                 "RUF", "YTT", "BLE", "COM", "DTZ", "EXE",
                 "ISC", "ICN001", "PIE", "PTH"
                ]
extend-ignore = ["E501", "D203", "D213", "D100", "N816", "S608"]
# E501: line length (done by black in our case)
# D203: 1 blank line required before class docstring
# D213:
# N816:  Variable `mixed_Case` in global scope should not be mixedCase
# S608 : Possible SQL injection vector through string-based query construction


[tool.ruff.lint.flake8-errmsg]
max-string-length = 20

[tool.ruff.lint.pydocstyle]
convention = "numpy"  # Accepts: "google", "numpy", or "pep257"

[tool.isort]
profile = "black"
known_astrolibraries=["astropy", "astropy_healpix", "astroplan"]
known_healpixandmoc=["mocpy","cdshealpix"]
known_plotinglibraries=["matplotlib","seaborn", "plotly"]
known_skyvisualizations=["ipyaladin"]
known_query=["astroquery", "pyvo"]
known_datahandling=["numpy", "specutils", "scipy"]
sections = ["FUTURE","STDLIB","ASTROLIBRARIES", "QUERY", "HEALPIXANDMOC", "SKYVISUALIZATIONS","PLOTINGLIBRARIES","DATAHANDLING","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]
import_heading_stdlib="Standard Library"
import_heading_firstparty="Local imports"
import_heading_astrolibraries="Astronomy tools"
import_heading_datahandling="Data handling"
import_heading_healpixandmoc="Moc and HEALPix tools"
import_heading_plotinglibraries="For plots"
import_heading_skyvisualizations="Sky visualization"
import_heading_query="Access astronomical databases"
